# common-c

./: CMakeLists.txt  LICENSE  README.md
include/arch-arduino/: cxa_arduino_gpio.h  cxa_arduino_timeBase.h
include/arch-atmega/: cxa_atmega_adcChannel.h  cxa_atmega_gpio.h  cxa_atmega_i2cSlave.h  cxa_atmega_led_pwm8.h  cxa_atmega_timeBase.h  cxa_atmega_timer.h  cxa_atmega_timer8.h  cxa_atmega_timer8_ocr.h  cxa_atmega_timer_icp.h  cxa_atmega_timer_ocr.h  cxa_atmega_usart.h
include/arch-awcu300/: cxa_awcu300_gpio.h  cxa_awcu300_i2cMaster.h  cxa_awcu300_timeBase.h  cxa_awcu300_timer32.h  cxa_awcu300_usart.h
include/arch-bgm/: cxa_bgm_gpio.h  cxa_bgm_i2cMaster.h  cxa_bgm_nvsManager.h  cxa_bgm_timeBase.h  cxa_bgm_usart.h
include/arch-ble112/: cxa_ble112_adcChannel.h  cxa_ble112_clockController.h  cxa_ble112_dmaController.h  cxa_ble112_gpio.h  cxa_ble112_pmux.h  cxa_ble112_timeBase.h  cxa_ble112_usart.h  cxa_ble112_ws2812String.h
include/arch-common/: cxa_adcChannel.h  cxa_adcEmaSampler.h  cxa_batteryCapacityEstimator.h  cxa_criticalSection.h  cxa_delay.h  cxa_gpio.h  cxa_gpio_debouncer.h  cxa_gpio_longPressManager.h  cxa_gpio_simpleCallback.h  cxa_i2cMaster.h  cxa_i2cSlave.h  cxa_ioStream_loopback.h  cxa_ioStream_pipe.h  cxa_led.h  cxa_led_gpio.h  cxa_led_runLoop.h  cxa_lightSensor.h  cxa_mutex.h  cxa_network_client.h  cxa_network_clientFactory.h  cxa_nvsManager.h  cxa_random.h  cxa_reboot.h  cxa_rgbLed.h  cxa_rgbLed_runLoop.h  cxa_rgbLed_runLoopTriLed.h  cxa_rgbLed_triLed.h  cxa_sntpClient.h  cxa_stepperMotorChannel.h  cxa_tempSensor.h  cxa_tempSensor_adc.h  cxa_timeBase.h  cxa_uniqueId.h  cxa_usart.h
include/arch-dummy/: cxa_dummy_gpio.h  cxa_dummy_led.h  cxa_dummy_rgbLed.h  cxa_dummy_usart.h
include/arch-esp32/: cxa_esp32_adcChannel.h  cxa_esp32_btle_client.h  cxa_esp32_eventManager.h  cxa_esp32_gpio.h  cxa_esp32_i2cMaster.h  cxa_esp32_nvsManager.h  cxa_esp32_timeBase.h  cxa_esp32_usart.h
include/arch-esp8266/: cxa_esp8266_gpio.h  cxa_esp8266_network_client.h  cxa_esp8266_network_clientFactory.h  cxa_esp8266_network_factory.h  cxa_esp8266_network_tcpClient.h  cxa_esp8266_network_tcpServer.h  cxa_esp8266_timeBase.h  cxa_esp8266_usart.h  cxa_esp8266_wifiManager.h
include/arch-libmraa/: cxa_libmraa_gpio.h  cxa_libmraa_usart.h
include/arch-pic32/: cxa_pic32_usart.h
include/arch-posix/: cxa_ioStream_file.h  cxa_ioStream_fromFile.h  cxa_mqtt_rpc_node_posixShell.h  cxa_posix_gpioConsole.h  cxa_posix_nvsManager.h  cxa_posix_timeBase.h  cxa_posix_usart.h
include/arch-tiC2K/: cxa_tiC2K_gpio.h  cxa_tiC2K_nvsManager.h  cxa_tiC2K_usart.h  strtok.h
include/arch-x86/: cxa_x86_gpioConsole.h  cxa_x86_gpio_console.h
include/arch-xmega/: cxa_xmega_ccp.h  cxa_xmega_clockController.h  cxa_xmega_eventSystem.h  cxa_xmega_gpio.h  cxa_xmega_ioStream_toFile.h  cxa_xmega_pmic.h  cxa_xmega_timeBase.h  cxa_xmega_timer16.h  cxa_xmega_timer16_captureChannel.h  cxa_xmega_timer32.h  cxa_xmega_usart.h
include/btle/: cxa_btle_advPacket.h  cxa_btle_central.h  cxa_btle_client.h  cxa_btle_connection.h  cxa_btle_connectionManager.h  cxa_btle_peripheral.h  cxa_btle_uuid.h
include/collections/: cxa_array.h  cxa_fixedByteBuffer.h  cxa_fixedFifo.h  cxa_linkedField.h  cxa_map.h
include/commandLineParser/: cxa_commandLineParser.h
include/console/: cxa_console.h
include/consoleMenu/: cxa_consoleMenu.h  cxa_consoleMenu_menu.h
include/fdLineParser/: cxa_fdLineParser.h
include/logger/: cxa_logger_header.h  cxa_logger_implementation.h
include/misc/: cxa_assert.h  cxa_backgroundUpdater.h  cxa_eui48.h  cxa_ioStream.h  cxa_numberUtils.h  cxa_profiler.h  cxa_stringUtils.h  cxa_uuid128.h
include/mqtt/: MQTTClient.h  cxa_mqtt_archImpl.h  cxa_mqtt_client.h  cxa_mqtt_client_network.h  cxa_mqtt_connectionManager.h  cxa_mqtt_messageFactory.h  cxa_mqtt_protocolParser.h  cxa_protocolParser_mqtt.h
include/net/: cxa_network_ethernetManager.h  cxa_network_factory.h  cxa_network_tcpClient.h  cxa_network_tcpServer.h  cxa_network_tcpServer_connectedClient.h  cxa_network_wifiManager.h
include/peripherals/: cxa_lightSensor_ltr329.h  cxa_ltc2942.h  cxa_pca9555.h  cxa_pca9624.h  cxa_rgbLed_pca9624.h  cxa_tempRhSensor_si7021.h  cxa_tempSensor_si7050.h  cxa_ws2812String.h
include/rpc/: cxa_rpc_message.h  cxa_rpc_messageFactory.h  cxa_rpc_messageHandler.h  cxa_rpc_node.h  cxa_rpc_nodeRemote.h  cxa_rpc_protocolParser.h  cxa_serial_protocolParser.h  cxa_serial_rpcProtocolManager.h
include/runLoop/: cxa_oneShotTimer.h  cxa_runLoop.h  cxa_softWatchDog.h
include/serial/: cxa_ioStream.h  cxa_ioStream_bridge.h  cxa_ioStream_loopback.h  cxa_ioStream_nullablePassthrough.h  cxa_ioStream_peekable.h  cxa_ioStream_pipe.h  cxa_ioStream_tee.h  cxa_protocolParser.h  cxa_protocolParser_cleProto.h  cxa_protocolParser_crlf.h
include/stateMachine/: cxa_stateMachine.h
include/timeUtils/: cxa_timeDiff.h  cxa_timeUtils.h
src/: cxa_awcu300_delay.c  cxa_awcu300_gpio.c
src/arch-arduino/: cxa_arduino_delay.c  cxa_arduino_gpio.c  cxa_arduino_timeBase.c
src/arch-atmega/: cxa_atmega_adcChannel.c  cxa_atmega_criticalSection.c  cxa_atmega_delay.c  cxa_atmega_gpio.c  cxa_atmega_i2cSlave.c  cxa_atmega_led_pwm8.c  cxa_atmega_mutex.c  cxa_atmega_random.c  cxa_atmega_reboot.c  cxa_atmega_timeBase.c  cxa_atmega_timer.c  cxa_atmega_timer8.c  cxa_atmega_timer8_ocr.c  cxa_atmega_timer_icp.c  cxa_atmega_timer_ocr.c  cxa_atmega_uniqueId.c  cxa_atmega_usart.c  uart.c
src/arch-awcu300/: cxa_awcu300_criticalSection.c  cxa_awcu300_gpio.c  cxa_awcu300_i2cMaster.c  cxa_awcu300_network_factory.c  cxa_awcu300_timeBase.c  cxa_awcu300_timer32.c  cxa_awcu300_uniqueId.c  cxa_awcu300_usart.c  (+1 more)
(+262 files in other folders)
